--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "hbs": "^4.0.1",
+    "pbkdf2-helpers": "^1.1.1",
     "pg-promise": "^7.3.1"
   }
 }
